Avoid overlap between question exposition and Inequality UI

--- a/src/scss/common/inequality-modal.scss
+++ b/src/scss/common/inequality-modal.scss
@@ -16,7 +16,7 @@
 
     .question-reminder {
         position: absolute;
-        bottom: 80px;
+        bottom: 140px;
         left: 250px;
         right: 250px;
         text-align: center;
